--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,6 @@
-
+body {
+  font-family: Arial, Helvetica, sans-serif;
+  background-color: #08040c;
+  color: white;
+  -webkit-text-stroke: 4px #3d444d;
+}
